feat: relevant administrative unit selector can also search
Refs: oph-647

--- a/app/components/process/relevant-admin-unit-selector.hbs
+++ b/app/components/process/relevant-admin-unit-selector.hbs
@@ -1,5 +1,8 @@
 <div class={{if @error "ember-power-select--error"}} ...attributes>
   <PowerSelectMultiple
+    @allowClear={{true}}
+    @searchEnabled={{true}}
+    @searchField="label"
     @loadingMessage="Aan het laden..."
     @noMatchesMessage="Geen resultaten"
     @options={{this.relevantAdministrativeUnits}}
