feat: show relevant links component in the attachement card of process detail
- Above the "bijlage"
- Show the links in an AuList
- can add a link

Adding will show an alert with a todo

Refs: oph-671

--- a/app/components/process/attachments.hbs
+++ b/app/components/process/attachments.hbs
@@ -28,6 +28,7 @@
   </:subheader>
 
   <:card>
+    <Process::RelevantLinks @canEdit={{@canEdit}} @processId={{@process.id}} />
     <AuDataTable
       @content={{this.attachments}}
       @isLoading={{this.attachmentsAreLoading}}
