feat: can add a link to a process
Refs: oph-671

--- a/app/components/process/attachments.hbs
+++ b/app/components/process/attachments.hbs
@@ -28,7 +28,7 @@
   </:subheader>
 
   <:card>
-    <Process::RelevantLinks @canEdit={{@canEdit}} @processId={{@process.id}} />
+    <Process::RelevantLinks @canEdit={{@canEdit}} @process={{@process}} />
     <AuDataTable
       @content={{this.attachments}}
       @isLoading={{this.attachmentsAreLoading}}
