feat: check if the values diverge from the original values
When editing we need to check if the l;abel or URL has changed

Refs: oph-671

--- a/app/components/process/relevant-links.hbs
+++ b/app/components/process/relevant-links.hbs
@@ -56,7 +56,9 @@
   <:title>Voeg link toe</:title>
   <:body>
     <p>Voeg een link toe die relevant is aan dit proces. De bijhorende label
-      wordt gebruikt om de links te tonen in de lijst.</p>
+      wordt gebruikt om de links te tonen in de lijst. Laat je deze leeg dan
+      wordt er de link getoont.
+    </p>
     <div class="au-u-margin-top">
       <AuLabel @error={{not this.isLabelValid}} for="relevant-link-label">
         Label
