feat: close delete modal and reset values when deleted
Refs: oph-671

--- a/app/components/process/relevant-links.hbs
+++ b/app/components/process/relevant-links.hbs
@@ -157,7 +157,8 @@
   <:title>Voeg link toe</:title>
   <:body>
     <p>Bent u zeker dat u de link
-      <a href={{this.updateLink.href}}> {{this.updateLink.displayLabel}}</a>
+      <a href={{this.updateLinkModel.href}}>
+        {{this.updateLinkModel.displayLabel}}</a>
       wilt verwijderen?</p>
   </:body>
   <:footer>
