feat: user can find ipdc products by typing
The "zoekterm" param is returning weird results AFAIK

Refs: oph-691

--- a/app/components/process/details-card/ipdc-multiple-select.hbs
+++ b/app/components/process/details-card/ipdc-multiple-select.hbs
@@ -1,6 +1,6 @@
 <div class={{if @error "ember-power-select--error"}}>
   <PowerSelectMultiple
-    @searchEnabled="true"
+    @searchEnabled={{true}}
     @searchMessage="Typ om te zoeken"
     @loadingMessage="Aan het laden ..."
     @noMatchesMessage="Geen resultaten"
