feat: create inventory admin route + base routing
- Create the admin route for inventory processes
- Update the navigation and breadcrums
- Put the links behind the admin role

Refs: oph-665

--- a/app/components/process-bar.hbs
+++ b/app/components/process-bar.hbs
@@ -27,4 +27,15 @@
       </Tab>
     </AuTabs>
   </Group>
+  <Group>
+    <AuTabs @reversed={{this.reversed}} as |Tab|>
+      {{#if (and this.currentSession.isAdmin this.currentRouteIsInventory)}}
+        <Tab>
+          <AuLink @route="inventory.admin">
+            Beheer
+          </AuLink>
+        </Tab>
+      {{/if}}
+    </AuTabs>
+  </Group>
 </AuToolbar>
