feat: create collapsible-container components
Kudos to @Andreo

Refs: oph-665

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -138,3 +138,7 @@ tr:hover .inventory-row-button-group .au-c-button {
     visibility: visible;
   }
 }
+
+.icon--black {
+  color: var(--au-gray-1000) !important;
+}
