feat: create table view domains for category components
These will show the domain names as text under in the collapsable

Refs: oph-665

--- a/app/templates/inventory/admin.hbs
+++ b/app/templates/inventory/admin.hbs
@@ -51,7 +51,7 @@
             </AuButton>
           </:action>
           <:default>
-            {{! tables }}
+            <Inventory::TableViewDomains @category={{category}} />
           </:default>
         </CollapsibleContainer>
       {{/each}}
