feat: show the groups of the domain in a collapsible table
Refs: oph-665

--- a/app/components/inventory/table-view-domains.hbs
+++ b/app/components/inventory/table-view-domains.hbs
@@ -1,3 +1,7 @@
-{{#each this.domains as |domain|}}
-  <p>{{domain.label}}</p>
-{{/each}}
+<div class="au-u-flex au-u-flex--row au-u-flex--spaced-large au-u-flex--wrap">
+  {{#each this.domains as |domain|}}
+    <div>
+      <Inventory::CollapsibleDomainTable @domain={{domain}} />
+    </div>
+  {{/each}}
+</div>
