--- a/app/components/inventory/table-view-domains.hbs
+++ b/app/components/inventory/table-view-domains.hbs
@@ -1,7 +1,10 @@
 <div class="au-u-flex au-u-flex--row au-u-flex--spaced-large au-u-flex--wrap">
   {{#each this.domains as |domain|}}
     <div>
-      <Inventory::CollapsibleDomainTable @domain={{domain}} />
+      <Inventory::CollapsibleDomainTable
+        @domain={{domain}}
+        @isCollapsedOnLoad={{true}}
+      />
     </div>
   {{/each}}
 </div>
