feat: only fetch the groups when they are opened + add loaders
- The calls take some time if they are not in cache, added a loader so the user knows that it is fetching data
- Only load the groups as this is a heavy query apparently when the table is opened

Refs: oph-665

--- a/app/components/inventory/collapsible-domain-table.hbs
+++ b/app/components/inventory/collapsible-domain-table.hbs
@@ -12,11 +12,15 @@
   </:title>
   <:body>
     {{#unless this.isCollapsed}}
-      {{#each this.groups as |group|}}
-        <tr>
-          <td>{{group.label}}</td>
-        </tr>
-      {{/each}}
+      {{#if this.isLoading}}
+        <AuLoader @hideMessage={{true}} />
+      {{else}}
+        {{#each this.groups as |group|}}
+          <tr>
+            <td>{{group.label}}</td>
+          </tr>
+        {{/each}}
+      {{/if}}
     {{/unless}}
   </:body>
   <:footer>
