--- a/app/components/inventory/collapsible-domain-table.hbs
+++ b/app/components/inventory/collapsible-domain-table.hbs
@@ -21,7 +21,29 @@
       {{else}}
         {{#each this.groups as |group|}}
           <tr>
-            <td>{{group.label}}</td>
+            <div
+              class="au-u-flex au-u-flex--row au-u-flex--vertical-center au-u-flex--between au-u-padding-left-small au-u-padding-right-small"
+            >
+              <p>{{group.label}}</p>
+              <AuButtonGroup
+                @inline={{true}}
+                class="inventory-row-button-group"
+              >
+                <AuButton
+                  @icon="pencil"
+                  @skin="naked"
+                  @size="large"
+                  {{!-- {{on "click" this.editGroup}} --}}
+                />
+                <AuButton
+                  @icon="bin"
+                  @skin="naked"
+                  @size="large"
+                  @alert={{true}}
+                  {{!-- {{on "click" this.openDeleteGroupModal}} --}}
+                />
+              </AuButtonGroup>
+            </div>
           </tr>
         {{/each}}
       {{/if}}
