--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -142,3 +142,6 @@ tr:hover .inventory-row-button-group .au-c-button {
 .icon--black {
   color: var(--au-gray-1000) !important;
 }
+.bg-200--blue {
+  background-color: var(--au-blue-200) !important;
+}
