fix: remove @ before value argument of auInput
Refs: oph-665

--- a/app/components/inventory/create-category-modal.hbs
+++ b/app/components/inventory/create-category-modal.hbs
@@ -14,8 +14,9 @@
         for="new-category"
       >Label</AuLabel>
       <AuInput
+        @error={{this.errorMessage}}
         id="new-category"
-        @value={{this.label}}
+        value={{this.label}}
         {{on "keyup" (perform this.updateLabel)}}
       />
       {{#if this.errorMessage}}
