feat: scroll to the category when clicked in the sidebar
Refs: oph-665

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -145,3 +145,8 @@ tr:hover .inventory-row-button-group .au-c-button {
 .bg-200--blue {
   background-color: var(--au-blue-200) !important;
 }
+
+.highlight-section {
+  border-radius: 5px;
+  background-color: var(--au-blue-200) !important;
+}
