feat: show add group when all other options are loaded
Refs: oph-655

--- a/app/components/inventory/collapsible-domain-table.hbs
+++ b/app/components/inventory/collapsible-domain-table.hbs
@@ -26,7 +26,7 @@
     {{/unless}}
   </:body>
   <:footer>
-    {{#unless (or this.isCollapsed this.isLoading)}}
+    {{#unless (or this.isCollapsed this.isFetchingGroups)}}
       <tr>
         <td>
           <AuButton
