rename: change button text for new conceptual process to be "Nieuw proces"
Refs: oph-665

--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -18,7 +18,7 @@
             @icon="add"
             iconAlignment="left"
             {{on "click" this.addNewInventoryProcess}}
-          >Nieuw hoofdproces</AuButton>
+          >Nieuw proces</AuButton>
         {{/if}}
         <AuButton
           @skin="primary"
