OPH-649 | Show tab "processen mijn bestuur" when logged on with userright "medewerker" (laagdrempelige autorisatie) (#129)
* feat: process-bar shows tabs depending on user role

- all processes, inventory, bestuur processes for authenticated users
- shared processes for editors

Refs: oph-649

* feat: show modules when role or authenticated

- Processenbibliotheek: requires authentication
- Processen mijn lokaal bestuur: requires authentication
- Deel jouw processen: requires editing rights
- Processeninventaris: requires authentication
- Administratie: requires admin rights

Refs: oph-649

* feat: update before models to require authentication

- Processenbibliotheek: requires authentication
- Processen mijn lokaal bestuur: requires authentication
- Deel jouw processen: requires editing rights
- Processeninventaris: requires authentication
- Administratie: requires admin rights

Refs: oph-649

* feat: add pull request pull_request_template

Refs: oph-649

* feat: inventory route is publicly available

Refs: oph-649

--- a/app/components/process-bar.hbs
+++ b/app/components/process-bar.hbs
@@ -1,28 +1,30 @@
 <AuToolbar @border="bottom" @skin="tint" class="au-c-navigation" as |Group|>
   <Group>
     <AuTabs @reversed={{this.reversed}} as |Tab|>
-      <Tab>
-        <AuLink @route="processes" @icon="sitemap">
-          Alle processen
-        </AuLink>
-      </Tab>
-      {{#if this.currentSession.canEdit}}
+      {{#if this.currentSession.isAuthenticated}}
+        <Tab>
+          <AuLink @route="processes" @icon="sitemap">
+            Alle processen
+          </AuLink>
+        </Tab>
         <Tab>
           <AuLink @route="my-local-government" @icon="users-four-of-four">
             Processen mijn bestuur
           </AuLink>
         </Tab>
+      {{/if}}
+      {{#if this.currentSession.canEdit}}
         <Tab>
           <AuLink @route="shared-processes" @icon="unordered-list">
             Gedeelde processen
           </AuLink>
         </Tab>
-        <Tab>
-          <AuLink @route="inventory" @icon="folder">
-            Inventaris processen
-          </AuLink>
-        </Tab>
       {{/if}}
+      <Tab>
+        <AuLink @route="inventory" @icon="folder">
+          Inventaris processen
+        </AuLink>
+      </Tab>
     </AuTabs>
   </Group>
 </AuToolbar>
