styling: fix width of domain tables
All widths are the same now

Refs: oph-665

--- a/app/components/inventory/table-view-domains.hbs
+++ b/app/components/inventory/table-view-domains.hbs
@@ -1,4 +1,4 @@
-<div class="au-u-flex au-u-flex--row au-u-flex--spaced-large au-u-flex--wrap">
+<div class="inventory-domain-tables">
   {{#if this.isLoading}}
     <AuLoader @hideMessage={{true}} />
   {{else}}
@@ -6,7 +6,7 @@
       <div>
         <Inventory::CollapsibleDomainTable
           @domain={{domain}}
-          @isCollapsedOnLoad={{true}}
+          @isCollapsedOnLoad={{false}}
         />
       </div>
     {{/each}}
