styling: match sidebar styling with design
Refs: oph-665

--- a/app/components/collapsible-container.hbs
+++ b/app/components/collapsible-container.hbs
@@ -11,7 +11,7 @@
         <AuButton
           @icon={{if this.isCollapsed "chevron-right" "chevron-down"}}
           @skin="naked"
-          class="au-u-flex au-u-flex--spaced-tiny icon--black"
+          class="au-u-flex au-u-flex--spaced-tiny color--black"
           {{on "click" this.toggleCollapse}}
         />
       </div>
