--- a/app/components/inventory/collapsible-domain-table.hbs
+++ b/app/components/inventory/collapsible-domain-table.hbs
@@ -10,7 +10,7 @@
       </p>
       <AuIcon
         @icon={{if this.isCollapsed "chevron-right" "chevron-down"}}
-        @class="au-u-flex au-u-flex--spaced-tiny icon--black"
+        @class="au-u-flex au-u-flex--spaced-tiny color--black"
       />
     </div>
   </:title>
