--- a/app/components/process/attachments.hbs
+++ b/app/components/process/attachments.hbs
@@ -28,6 +28,7 @@
   </:subheader>
 
   <:card>
+    <Process::RelevantLinks @canEdit={{@canEdit}} @process={{@process}} />
     <AuDataTable
       @content={{this.attachments}}
       @isLoading={{this.attachmentsAreLoading}}
