feat: narrow down the duplicate search on the concepts in the correct scheme
Refs: oph-665

--- a/app/components/inventory/editable-group-row.hbs
+++ b/app/components/inventory/editable-group-row.hbs
@@ -1,7 +1,7 @@
 <tr>
   <div
     class="{{if this.isEditing 'bg-200--blue'}}
-      au-u-flex au-u-flex--row au-u-flex--vertical-center au-u-flex--between au-u-padding-left-small au-u-padding-right-small"
+      au-u-flex au-u-flex--row au-u-flex--vertical-center au-u-flex--between au-u-padding-small au-padding-right-none"
   >
     {{#if this.isEditing}}
       <AuInput
