feat: show category content on click in sidebar
Refs: oph-665

--- a/app/components/collapsible-container.hbs
+++ b/app/components/collapsible-container.hbs
@@ -26,9 +26,9 @@
     {{/if}}
   </div>
 
-  {{#unless this.isCollapsed}}
+  {{#if this.isContentShown}}
     <div class="au-u-margin">
       {{yield}}
     </div>
-  {{/unless}}
+  {{/if}}
 </div>
