feat: fetch some results on focus so there are options to start from
Refs: oph-448

--- a/app/components/process/details-card/ipdc-multiple-select.hbs
+++ b/app/components/process/details-card/ipdc-multiple-select.hbs
@@ -4,7 +4,9 @@
     @searchMessage="Typ om te zoeken"
     @loadingMessage="Aan het laden ..."
     @noMatchesMessage="Geen resultaten"
+    @options={{this.products}}
     @search={{perform this.loadIpdcProductsTask}}
+    @onFocus={{perform this.loadIpdcProductsTask}}
     @selected={{@selected}}
     @onChange={{@onChange}}
     @disabled={{@disabled}}
