--- a/app/components/process/details-card/ipdc-multiple-select.hbs
+++ b/app/components/process/details-card/ipdc-multiple-select.hbs
@@ -6,7 +6,7 @@
     @noMatchesMessage="Geen resultaten"
     @options={{this.products}}
     @search={{perform this.loadIpdcProductsTask}}
-    @onFocus={{perform this.loadIpdcProductsTask}}
+    @onOpen={{perform this.loadIpdcProductsTask}}
     @selected={{@selected}}
     @onChange={{@onChange}}
     @disabled={{@disabled}}
