feat: selected category id will be set in the url as a queryparam
Filter is not applied to the table content yet

Refs: oph-711

--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -1,7 +1,6 @@
 <SidebarContainer>
   <:sidebar>
-    <div class="au-c-sidebar">
-    </div>
+    <Inventory::SidebarFilters @params={{@model.params}} @onFilterApplied={{this.updateFilters}}/>
   </:sidebar>
   <:content>
     <PageHeader>
