feat: enable search on category filter
Refs: oph-711

--- a/app/components/inventory/select-category.hbs
+++ b/app/components/inventory/select-category.hbs
@@ -1,5 +1,7 @@
 <div class={{if @error "ember-power-select--error"}} ...attributes>
   <PowerSelect
+    @searchEnabled={{true}}
+    @searchField="label"
     @loadingMessage="Aan het laden..."
     @noMatchesMessage="Geen resultaten"
     @options={{this.categories.value}}
