feat: selected domain id will be set in the url as a queryParam
Filter is not applied to the table content yet

Refs: oph-711

--- a/app/components/inventory/sidebar-filters.hbs
+++ b/app/components/inventory/sidebar-filters.hbs
@@ -14,6 +14,16 @@
           class="grow"
         />
       </div>
+      <div>
+        <AuLabel for="filter-domain">Procesdomein</AuLabel>
+        <Inventory::SelectDomain
+          @id="filter-domain"
+          @selected={{@params.domain}}
+          @onChange={{this.onFilterUpdated}}
+          @category={{@params.category}}
+          class="grow"
+        />
+      </div>
       <div class="au-u-flex au-u-flex--end">
         <AuButton
           @icon="cross"
