feat: selected group id will be set in the url as a queryParam
Filter is not applied to the table content yet

Refs: oph-711

--- a/app/components/inventory/sidebar-filters.hbs
+++ b/app/components/inventory/sidebar-filters.hbs
@@ -24,6 +24,17 @@
           class="grow"
         />
       </div>
+      <div>
+        <AuLabel for="filter-group">Procesgroep</AuLabel>
+        <Inventory::SelectGroup
+          @id="filter-group"
+          @selected={{@params.group}}
+          @onChange={{this.onFilterUpdated}}
+          @category={{@params.category}}
+          @domain={{@params.domain}}
+          class="grow"
+        />
+      </div>
       <div class="au-u-flex au-u-flex--end">
         <AuButton
           @icon="cross"
