feat: disable filters above so users cannot do invalid combinations
Refs: oph-711

--- a/app/components/inventory/select-category.hbs
+++ b/app/components/inventory/select-category.hbs
@@ -1,5 +1,6 @@
 <div class={{if @error "ember-power-select--error"}} ...attributes>
   <PowerSelect
+    @disabled={{@disabled}}
     @searchEnabled={{true}}
     @searchField="label"
     @loadingMessage="Aan het laden..."
