--- a/app/components/inventory/select-domain.hbs
+++ b/app/components/inventory/select-domain.hbs
@@ -1,5 +1,6 @@
 <div class={{if @error "ember-power-select--error"}} ...attributes>
   <PowerSelect
+    @disabled={{@disabled}}
     @searchEnabled={{true}}
     @searchField="label"
     @loadingMessage="Aan het laden..."
