OPH-665 | Inventory admin page (#134)
* feat: create inventory admin route + base routing

- Create the admin route for inventory processes
- Update the navigation and breadcrums
- Put the links behind the admin role

Refs: oph-665

* feat: fetch all conceptual process categories from process-api

Refs: oph-665

* feat: create collapsible-container components

Kudos to @Andreo

Refs: oph-665

* feat: show all categories in as a collapsible-container

Just the collapsible + the add domain button

Refs: oph-665

* feat: create table view domains for category components

These will show the domain names as text under in the collapsable

Refs: oph-665

* feat: show the groups of the domain in a collapsible table

Refs: oph-665

* feat: close all tables and category containers on load

Refs: oph-665

* feat: only fetch the groups when they are opened + add loaders

- The calls take some time if they are not in cache, added a loader so the user knows that it is fetching data
- Only load the groups as this is a heavy query apparently when the table is opened

Refs: oph-665

* feat: make the collapsible table title completely clickable

This so the user can just click the main container and does not have to search for the button

Refs: oph-665

* feat: can add a new category

Refs: oph-665

* feat: create modal to create domain for category

Refs: oph-665

* refactor: move the create category to its own components

Refs: oph-665

* feat: check on duplicates for categories

Refs: oph-665

* feat: check on duplicates for domains within a category

Refs: oph-665

* refactor: do not fetch ccategories from service => fetch all

Apparently we just want to show all of them so I can use a query with all  of them

Refs: oph-665

* feat: delay the loader for fast calls when fetching the groups

Refs: oph-665

* feat: show the edit and delete button on hover of the domain group

No action yet

Refs: oph-665

* feat: can edit a domain group

Refs: oph-665

* fix: remove @ before value 

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -138,3 +138,26 @@ tr:hover .inventory-row-button-group .au-c-button {
     visibility: visible;
   }
 }
+
+.color--black {
+  color: var(--au-gray-1000) !important;
+}
+
+.bg-200--blue {
+  background-color: var(--au-blue-200) !important;
+}
+
+.highlight-section {
+  border-radius: 5px;
+  background-color: var(--au-blue-200) !important;
+}
+
+.inventory-domain-tables {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 2.5rem;
+
+  table {
+    width: 25vw !important;
+  }
+}
