--- a/app/components/process-bar.hbs
+++ b/app/components/process-bar.hbs
@@ -21,7 +21,7 @@
         </Tab>
       {{/if}}
       <Tab>
-        <AuLink @route="inventory" @icon="folder">
+        <AuLink @route="inventory.index" @icon="folder">
           Inventaris processen
         </AuLink>
       </Tab>
