feat: hide the delete button for groups of a domain on admin page
Refs: oph-716

--- a/app/components/inventory/editable-group-row.hbs
+++ b/app/components/inventory/editable-group-row.hbs
@@ -51,13 +51,15 @@
             {{on "click" (fn (mut this.isArchiveModelOpen) true)}}
           />
         {{/if}}
-        <AuButton
-          @icon="bin"
-          @skin="naked"
-          @size="large"
-          @alert={{true}}
-          {{on "click" (fn (mut this.isDeleteModelOpen) true)}}
-        />
+        {{#unless true}}
+          <AuButton
+            @icon="bin"
+            @skin="naked"
+            @size="large"
+            @alert={{true}}
+            {{on "click" (fn (mut this.isDeleteModelOpen) true)}}
+          />
+        {{/unless}}
       </AuButtonGroup>
     {{/if}}
   </div>
