--- a/app/components/inventory/collapsible-domain-table.hbs
+++ b/app/components/inventory/collapsible-domain-table.hbs
@@ -1,17 +1,23 @@
 <AuTable @size={{this.size}}>
   <:title>
-    {{! template-lint-disable no-invalid-interactive }}
     <div
       class="au-u-flex au-u-flex--row au-u-flex--no-wrap au-u-flex--vertical-center au-u-flex--between"
-      {{on "click" this.toggleCollapse}}
     >
-      <p class="au-u-muted au-u-h6">
-        {{@domain.label}}
-      </p>
-      <AuIcon
-        @icon={{if this.isCollapsed "chevron-right" "chevron-down"}}
-        @class="au-u-flex au-u-flex--spaced-tiny color--black"
-      />
+      {{! template-lint-disable no-invalid-interactive }}
+      <div
+        class="au-u-flex au-u-flex--vertical-center"
+        {{on "click" this.toggleCollapse}}
+      >
+        <AuHeading class="au-u-muted" @skin="6">
+          {{@domain.label}}
+        </AuHeading>
+        <AuButton
+          @icon={{if this.isCollapsed "chevron-right" "chevron-down"}}
+          @skin="naked"
+          class="au-u-flex au-u-flex--spaced-tiny color--black"
+        />
+      </div>
+      <Inventory::EditToolbar @modelName="process-domain" @model={{@domain}} @onModelDeleted={{@onDomainDeleted}}/>
     </div>
   </:title>
   <:body>
@@ -20,7 +26,11 @@
         <AuLoader @hideMessage={{true}} />
       {{else}}
         {{#each this.groups as |group|}}
-          <Inventory::EditableGroupRow @group={{group}} @domain={{@domain}} @onRemovedGroup={{this.loadGroups}}/>
+          <Inventory::EditableGroupRow
+            @group={{group}}
+            @domain={{@domain}}
+            @onRemovedGroup={{this.loadGroups}}
+          />
         {{/each}}
       {{/if}}
     {{/unless}}
